--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.23",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.21",
     "nodemon": "^2.0.7",
