--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.ts",
-    "build": "tsc --project ./"
+    "build": "tsc --project ./",
+    "prod": "node ./build/index.js"
   },
   "keywords": [],
   "author": "",
